--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<style>@import"https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400&display=swap";*{font-family:inherit}body{margin:0;font-family:Roboto;font-size:14px}</style><link rel="stylesheet" href="styles.94d85bdb7cb5e063.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.94d85bdb7cb5e063.css"></noscript></head>
+<style>@import"https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400&display=swap";*{font-family:inherit}body{margin:0;font-family:Roboto;font-size:14px}</style><link rel="stylesheet" href="/angular-project-template/styles.94d85bdb7cb5e063.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="/angular-project-template/styles.94d85bdb7cb5e063.css"></noscript></head>
 
 <body>
   <app-root></app-root>
-<script src="runtime.78ebd711587c6899.js" type="module"></script><script src="polyfills.d2c97243e2f48c04.js" type="module"></script><script src="main.1ec42f5d55e71502.js" type="module"></script>
+<script src="/angular-project-template/runtime.78ebd711587c6899.js" type="module"></script><script src="/angular-project-template/polyfills.d2c97243e2f48c04.js" type="module"></script><script src="/angular-project-template/main.1ec42f5d55e71502.js" type="module"></script>
 
 </body></html>
