--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>AngularTaskForCroco</title>
-  <base href="/">
+  <base href="/angular-project-template/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>@import"https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400&display=swap";*{font-family:inherit}body{margin:0;font-family:Roboto;font-size:14px}</style><link rel="stylesheet" href="/angular-project-template/styles.94d85bdb7cb5e063.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="/angular-project-template/styles.94d85bdb7cb5e063.css"></noscript></head>
